--- a/.github/workflows/Notify.yml
+++ b/.github/workflows/Notify.yml
@@ -104,11 +104,8 @@ jobs:
           commit=$(echo "$commit" | sed 's/^- /🔹 /g')
           # Replace "):" with ") :"
           tel_commit=$(echo "$commit" | sed -E 's/\): [^:]+:/) :/g')
-          # Remove lines containing ---
-          tel_commit=$(echo "$tel_commit" | sed '/---/d')
-
-          # Ensure exactly one blank line after each section
-          tel_commit=$(echo "$tel_commit" | sed -E '/^[^[:space:]]/ { N; /^\n$/! s/$/\n/ }')
+          # Replace lines containing '---' with a single blank line, then remove other blank lines
+          tel_commit=$(echo "$tel_commit" | sed '/---/s/.*$/\n/' | sed '/^[[:space:]]*$/d')
 
           # Count total commits
           commit_count=$(echo "$tel_commit" | grep -oE '\b[0-9a-f]{7,}\b' | wc -l)
