--- a/.github/workflows/Notify.yml
+++ b/.github/workflows/Notify.yml
@@ -39,48 +39,43 @@ jobs:
           declare -a TAGS_WITH_DATES=()
 
           for TAG in $TAGS; do
-          # Fetch tag reference details
-          TAG_DETAILS=$(curl -s "https://api.github.com/repos/Shebyyy/Azyx/git/refs/tags/$TAG")
-          OBJECT_URL=$(echo "$TAG_DETAILS" | jq -r '.object.url // empty')
+            # Fetch tag reference details
+            TAG_DETAILS=$(curl -s "https://api.github.com/repos/Shebyyy/Azyx/git/refs/tags/$TAG")
+            OBJECT_URL=$(echo "$TAG_DETAILS" | jq -r '.object.url // empty')
 
-          if [ -n "$OBJECT_URL" ]; then
-          # Fetch object details for date
-          OBJECT_DETAILS=$(curl -s "$OBJECT_URL")
-          DATE=$(echo "$OBJECT_DETAILS" | jq -r '.tagger.date // .committer.date // empty')
+            if [ -n "$OBJECT_URL" ]; then
+              # Fetch object details for date
+              OBJECT_DETAILS=$(curl -s "$OBJECT_URL")
+              DATE=$(echo "$OBJECT_DETAILS" | jq -r '.tagger.date // .committer.date // empty')
 
-          if [ -n "$DATE" ]; then
-          # Append date and tag pair
-          TAGS_WITH_DATES+=("$DATE $TAG")
-          else
-          echo "No date found for tag $TAG"
-          fi
-          else
-          echo "No object URL found for tag $TAG"
-          fi
+              if [ -n "$DATE" ]; then
+                # Convert date to desired format: DD-MM-YYYY hh:mm:ss
+                FORMATTED_DATE=$(date -d "$DATE" +"%d-%m-%Y %H:%M:%S")
+                TAGS_WITH_DATES+=("$FORMATTED_DATE $TAG")
+              else
+                echo "No date found for tag $TAG"
+              fi
+            else
+              echo "No object URL found for tag $TAG"
+            fi
           done
 
-          # Debugging: Print unsorted tags
-          echo "Unsorted tags with dates:"
+          # Debugging: Print unsorted tags with formatted dates
+          echo "Unsorted tags with formatted dates:"
           printf "%s\n" "${TAGS_WITH_DATES[@]}"
 
-          # Find the tag with the latest date (no sorting)
-          LATEST_TAG=""
-          LATEST_DATE=""
+          # Sort by formatted date
+          SORTED_TAGS=$(printf "%s\n" "${TAGS_WITH_DATES[@]}" | sort)
 
-          for TAG_DATE in "${TAGS_WITH_DATES[@]}"; do
-          TAG_DATE_TIME=$(echo "$TAG_DATE" | awk '{print $1}')
-          TAG_NAME=$(echo "$TAG_DATE" | awk '{print $2}')
+          # Debugging: Print sorted tags
+          echo "Sorted tags with formatted dates:"
+          echo "$SORTED_TAGS"
 
-          if [[ -z "$LATEST_DATE" || "$TAG_DATE_TIME" > "$LATEST_DATE" ]]; then
-          LATEST_DATE="$TAG_DATE_TIME"
-          LATEST_TAG="$TAG_NAME"
-          fi
-          done
-
-          # Output the latest tag found
+          # Get the latest tag from the sorted list
+          LATEST_TAG=$(echo "$SORTED_TAGS" | tail -n 1 | awk '{print $3}')
           echo "The selected latest tag is: $LATEST_TAG"
           echo "LATEST_TAG=$LATEST_TAG" >> $GITHUB_ENV
-          
+
       - name: Use the Latest Tag
         run: |
          echo "The latest tag is: ${{ env.LATEST_TAG }}"
