--- a/.github/workflows/Notify.yml
+++ b/.github/workflows/Notify.yml
@@ -35,19 +35,15 @@ jobs:
           # Fetch tags from the GitHub repository
           curl -s "https://api.github.com/repos/Shebyyy/Azyx/tags" -o tags.json
           TAGS=$(jq -r '.[].name' tags.json)
-
           declare -a TAGS_WITH_DATES=()
-
           for TAG in $TAGS; do
           # Fetch tag reference details
           TAG_DETAILS=$(curl -s "https://api.github.com/repos/Shebyyy/Azyx/git/refs/tags/$TAG")
           OBJECT_URL=$(echo "$TAG_DETAILS" | jq -r '.object.url // empty')
-
           if [ -n "$OBJECT_URL" ]; then
           # Fetch object details for date
           OBJECT_DETAILS=$(curl -s "$OBJECT_URL")
           DATE=$(echo "$OBJECT_DETAILS" | jq -r '.tagger.date // .committer.date // empty')
-
           if [ -n "$DATE" ]; then
           # Append date and tag pair
           TAGS_WITH_DATES+=("$DATE $TAG")
@@ -58,25 +54,20 @@ jobs:
           echo "No object URL found for tag $TAG"
           fi
           done
-
           # Debugging: Print unsorted tags
           echo "Unsorted tags with dates:"
           printf "%s\n" "${TAGS_WITH_DATES[@]}"
-
           # Find the tag with the latest date (no sorting)
           LATEST_TAG=""
           LATEST_DATE=""
-
           for TAG_DATE in "${TAGS_WITH_DATES[@]}"; do
           TAG_DATE_TIME=$(echo "$TAG_DATE" | awk '{print $1}')
           TAG_NAME=$(echo "$TAG_DATE" | awk '{print $2}')
-
           if [[ -z "$LATEST_DATE" || "$TAG_DATE_TIME" > "$LATEST_DATE" ]]; then
           LATEST_DATE="$TAG_DATE_TIME"
           LATEST_TAG="$TAG_NAME"
           fi
           done
-
           # Output the latest tag found
           echo "The selected latest tag is: $LATEST_TAG"
           echo "LATEST_TAG=$LATEST_TAG" >> $GITHUB_ENV
@@ -153,15 +144,11 @@ jobs:
           # Replace ### with **
           commit=$(echo "$RELEASE_NOTES" | sed 's/^### /**/g')
           # Replace * with 🔹 (excluding headings)
-          commit=$(echo "$commit" | sed 's/^- /🔹 /g')
+          commit=$(echo "$commit" | sed 's/^* /🔹 /g')
           # Replace "):" with ") :"
           tel_commit=$(echo "$commit" | sed -E 's/\): [^:]+:/) :/g')
-          # Replace lines containing '---' with a single blank line, then remove other blank lines
-          tel_commit=$(echo "$tel_commit" | sed '/^[[:space:]]*$/d' | sed 's/`//g' | sed '/---/s/.*$/\n/')
-
           # Count total commits
           commit_count=$(echo "$tel_commit" | grep -oE '\b[0-9a-f]{7,}\b' | wc -l)
-
           # Set Telegram message character limit
           max_length=3500
           
@@ -178,7 +165,6 @@ jobs:
             MESSAGE="**🚀 New Release: ${RELEASE_NAME}**
             Release Notes:
             $trimmed_commit
-
             📌 Note: There are $remaining_commits more commits.
             [View Full changelog here](https://github.com/Shebyyy/Azyx/releases/tag/${{ env.LATEST_TAG }})"
           else
@@ -187,10 +173,8 @@ jobs:
           Release Notes:
           $tel_commit"
           fi
-
           # Log the MESSAGE for debugging
           echo "Telegram Message: $MESSAGE"
-
           # Send the message to Telegram
           curl -X POST "https://api.telegram.org/bot${{ secrets.TELEGRAM_BOT_TOKEN }}/sendMessage" \
             -H "Content-Type: application/json" \
@@ -200,8 +184,6 @@ jobs:
               "parse_mode": "Markdown",
               "disable_web_page_preview": true
             }'
-
-
       - name: Send Assets to Telegram
         run: |
           MESSAGE="🎉 *${{ env.LATEST_TAG }} Released* 🎉
