--- a/.github/workflows/Notify.yml
+++ b/.github/workflows/Notify.yml
@@ -142,7 +142,7 @@ jobs:
       - name: Send Release Notes to Telegram
         run: |
           # Replace ### with **
-          commit=$(echo "$RELEASE_NOTES" | sed 's/^### /**/g')
+          commit=$(echo "$RELEASE_NOTES" | sed 's/^### /**/g' | sed 's/`//g')
           # Replace * with 🔹 (excluding headings)
           commit=$(echo "$commit" | sed 's/^* /🔹 /g')
           # Replace "):" with ") :"
