--- a/.github/workflows/Notify.yml
+++ b/.github/workflows/Notify.yml
@@ -141,8 +141,8 @@ jobs:
     
       - name: Send Release Notes to Telegram
         run: |
-          # Replace ### with **
-          commit=$(echo "$RELEASE_NOTES" | sed 's/^### /**/g' | sed 's/`//g')
+          # Replace ###, ##, # with nothing and backticks with nothing
+          commit=$(echo "$RELEASE_NOTES" | sed 's/^### /**/g' | sed 's/^## /**/g' | sed 's/^# /**/g' | sed 's/`//g') 
           # Replace * with 🔹 (excluding headings)
           commit=$(echo "$commit" | sed 's/^* /🔹 /g')
           # Replace "):" with ") :"
